Use HTTPS instead of HTTP to resolve dependencies
This fixes a security vulnerability in this project where the `pom.xml`
files were configuring Maven to resolve dependencies over HTTP instead of
HTTPS.

Signed-off-by: Jonathan Leitschuh <Jonathan.Leitschuh@gmail.com>

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -259,7 +259,7 @@
         </repository>
         <repository>
             <id>com.teamdev</id>
-            <url>http://maven.teamdev.com/repository/products</url>
+            <url>https://maven.teamdev.com/repository/products</url>
         </repository>
     </repositories>
 
