--- a/plugins/systemtray/pom.xml
+++ b/plugins/systemtray/pom.xml
@@ -37,7 +37,7 @@
     <repositories>
         <repository>
             <id>coljars</id>
-            <url>http://clojars.org/repo/</url>
+            <url>https://clojars.org/repo/</url>
         </repository>
     </repositories>
 </project>
